Wrap location clusters in detailed response and propagate processing messages